--- a/packages/graphql-js-operation-payload-generator/package.json
+++ b/packages/graphql-js-operation-payload-generator/package.json
@@ -26,7 +26,7 @@
     "relay-test-utils-internal": "^11.0.2"
   },
   "publishConfig": {
-    "main": "./lib/index.js",
+    "main": "./lib/index",
     "types": "./lib/index.d.ts",
     "access": "public",
     "module": "./lib/index.mjs",
