--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   "resolutions": {
     "glob-parent": "^6.0.2",
     "minimist": "^1.2.6",
+    "node-fetch": "^3.2.3",
     "trim": "^1.0.1"
   }
 }
