--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "glob-parent": "^6.0.2",
     "minimist": "^1.2.6",
     "node-fetch": "^3.2.3",
+    "node-forge": "^1.3.1",
     "trim": "^1.0.1"
   }
 }
