--- a/examples/supermassive-todomvc/package.json
+++ b/examples/supermassive-todomvc/package.json
@@ -37,12 +37,12 @@
     "zen-observable": "^0.8.15"
   },
   "resolutions": {
+    "ansi-html": "^0.0.9",
     "graphql": "^15.6.1",
     "glob-parent": "^6.0.2",
     "minimist": "^1.2.6",
     "node-fetch": "^2.6.7",
-    "node-forge": "^1.3.1",
-    "trim": "^1.0.1"
+    "node-forge": "^1.3.1"
   },
   "devDependencies": {
     "@graphql-codegen/cli": "^2.2.2",
