--- a/examples/supermassive-todomvc/package.json
+++ b/examples/supermassive-todomvc/package.json
@@ -39,6 +39,7 @@
   "resolutions": {
     "ansi-html": "^0.0.9",
     "ansi-regex": "^5.0.1",
+    "cross-fetch": "^3.1.5",
     "eventsource": "^2.0.2",
     "graphql": "^15.6.1",
     "glob-parent": "^6.0.2",
