--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "prettier": "^2.2.1"
   },
   "resolutions": {
+    "cross-fetch": "^3.1.5",
     "glob-parent": "^6.0.2",
     "minimist": "^1.2.6",
     "node-fetch": "^2.6.7",
