--- a/website/package.json
+++ b/website/package.json
@@ -29,6 +29,7 @@
     "typescript": "^4.5.2"
   },
   "resolutions": {
+    "cross-fetch": "^3.1.5",
     "glob-parent": "^6.0.2",
     "minimist": "^1.2.6",
     "node-fetch": "^2.6.7",
