--- a/examples/supermassive-todomvc/package.json
+++ b/examples/supermassive-todomvc/package.json
@@ -43,6 +43,7 @@
     "eventsource": "^2.0.2",
     "graphql": "^15.6.1",
     "glob-parent": "^6.0.2",
+    "mem": "^4.3.0",
     "minimist": "^1.2.6",
     "node-fetch": "^2.6.7",
     "node-forge": "^1.3.1"
