--- a/website/package.json
+++ b/website/package.json
@@ -34,6 +34,7 @@
     "minimist": "^1.2.6",
     "node-fetch": "^2.6.7",
     "node-forge": "^1.3.1",
+    "nth-check": "^2.0.1",
     "trim": "^1.0.1"
   },
   "browserslist": {
