--- a/packages/graphql-js-operation-payload-generator/tsconfig.json
+++ b/packages/graphql-js-operation-payload-generator/tsconfig.json
@@ -7,5 +7,10 @@
     "outDir": "lib"
   },
   "include": ["src"],
-  "references": [{ "path": "../graphql-js-tag" }]
+  "references": [{ "path": "../graphql-js-tag" }],
+  "ts-node": {
+    "compilerOptions": {
+      "module": "commonjs"
+    }
+  }
 }
