Add graphql as a dependency

--- a/packages/graphql-js-operation-payload-generator/package.json
+++ b/packages/graphql-js-operation-payload-generator/package.json
@@ -18,7 +18,9 @@
     "test:schema-types": "ts-node ./scripts/graphql-codegen.ts"
   },
   "dependencies": {
-    "deepmerge": "^4.2.2"
+    "deepmerge": "^4.2.2",
+    "invariant": "^2.2.4",
+    "graphql": "^15.5.0"
   },
   "devDependencies": {
     "@graphitation/graphql-js-tag": "^0.9.0",
