--- a/packages/graphql-js-operation-payload-generator/package.json
+++ b/packages/graphql-js-operation-payload-generator/package.json
@@ -19,8 +19,7 @@
   },
   "dependencies": {
     "deepmerge": "^4.2.2",
-    "invariant": "^2.2.4",
-    "graphql": "^15.0.0"
+    "invariant": "^2.2.4"
   },
   "devDependencies": {
     "@graphitation/graphql-js-tag": "^0.9.0",
@@ -29,8 +28,12 @@
     "@graphql-codegen/typescript": "^2.5.1",
     "@types/jest": "^26.0.22",
     "monorepo-scripts": "*",
-    "relay-test-utils-internal": "^12.0.0",
-    "ts-node": "^10.8.1"
+    "relay-test-utils-internal": "^11.0.2",
+    "ts-node": "^10.8.1",
+    "graphql": "^17.0.0-alpha.2"
+  },
+  "peerDependencies": {
+    "graphql": "^15.0.0 || ^16.0.0 || ^17.0.0"
   },
   "publishConfig": {
     "main": "./lib/index",
