--- a/packages/graphql-js-operation-payload-generator/package.json
+++ b/packages/graphql-js-operation-payload-generator/package.json
@@ -18,6 +18,7 @@
     "test:schema-types": "ts-node ./scripts/graphql-codegen.ts"
   },
   "dependencies": {
+    "@types/relay-test-utils": ">=17.0.0",
     "deepmerge": "^4.2.2",
     "invariant": "^2.2.4",
     "graphql": "^15.0.0"
