--- a/packages/graphql-js-operation-payload-generator/tsconfig.json
+++ b/packages/graphql-js-operation-payload-generator/tsconfig.json
@@ -4,7 +4,8 @@
     "composite": true,
     "tsBuildInfoFile": ".tsbuildinfo",
     "rootDir": "src",
-    "outDir": "lib"
+    "outDir": "lib",
+    "skipLibCheck": true
   },
   "include": ["src"],
   "references": [{ "path": "../graphql-js-tag" }],
