--- a/packages/graphql-js-operation-payload-generator/tsconfig.json
+++ b/packages/graphql-js-operation-payload-generator/tsconfig.json
@@ -4,8 +4,7 @@
     "composite": true,
     "tsBuildInfoFile": ".tsbuildinfo",
     "rootDir": "src",
-    "outDir": "lib",
-    "skipLibCheck": true
+    "outDir": "lib"
   },
   "include": ["src"],
   "references": [{ "path": "../graphql-js-tag" }],
