--- a/packages/graphql-js-operation-payload-generator/package.json
+++ b/packages/graphql-js-operation-payload-generator/package.json
@@ -2,7 +2,7 @@
   "name": "@graphitation/graphql-js-operation-payload-generator",
   "description": "Generates a payload for a given GraphQL operation expressed in graphql-js AST and a GraphQL Schema.",
   "license": "MIT",
-  "version": "0.13.0",
+  "version": "0.13.1-alpha.0",
   "repository": {
     "type": "git",
     "url": "https://github.com/microsoft/graphitation.git",
@@ -25,7 +25,7 @@
   },
   "devDependencies": {
     "@graphitation/graphql-js-tag": "^0.10.0",
-    "@graphitation/graphql-codegen-typescript-typemap-plugin": "^1.1.0",
+    "@graphitation/graphql-codegen-typescript-typemap-plugin": "^1.1.1-alpha.0",
     "@graphql-codegen/cli": "^5.0.0",
     "@graphql-codegen/typescript": "^4.0.0",
     "@types/jest": "^26.0.22",
